# QuickDict

./: .gitignore  LICENSE  README.en.md  README.md  package-lock.json  package.json  使用指南.md
rdict/: .gitignore  BUILD.md  README.md
rdict/src/: index.html  lookup.html
rdict/src-tauri/: Cargo.toml  tauri.conf.json
rdict/src-tauri/icons/: README.md  tauri-icon-placeholder.txt
rdict/src-tauri/src/: config.rs  lib.rs  main.rs  mdict.rs
src/: index.html  lookup.html  main.js  mdict-parser.js  settings.html
